# KAADivisors

./: README.md
kaadivisors/: Cargo.toml  README.md
kaadivisors/src/: lib.rs  main.rs
kaadivisors/tests/: divisors.rs  power.rs
