[package]
name = "kaadivisors"
version = "1.3.1"
authors = ["Khafizov Alexey"]
edition = "2024"
description = "Extremely fast search for the divisors of a number."
license = "MIT OR Apache-2.0"

[[bin]]
name = "kaadivs"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
lto = "thin"

[dependencies]
